// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`explorer OPEN_EXPLORER 1`] = `
Object {
  "depth": 0,
  "isVisible": true,
  "page": 1,
}
`;

exports[`explorer GOTO_PAGE 1`] = `
Object {
  "depth": 0,
  "isVisible": false,
  "page": null,
}
`;
